<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mainOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom|center"
        android:background="#2e2eff">

        <ImageButton
            android:id="@+id/btnLanguage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/language"
            android:layout_gravity="end"
            android:src="@drawable/flag_en"
            android:paddingEnd="10dp"
            />

        <Button
            android:id="@+id/button_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_game" />

        <Button
            android:id="@+id/button_word_packs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/word_packs" />

        <Button
            android:id="@+id/button_rules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Alias"
            android:textSize="40sp"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rulesOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:background="#AA000000"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/rulesHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="32sp"/>

        <TextView
            android:id="@+id/rules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_play"
            android:textSize="14sp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button_rulesExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK" />

    </LinearLayout>
</FrameLayout>